tests/snapshots/integration__integration_tests__switch__switch_error_missing_directory.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - missing-wt
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m❌ Worktree directory missing for '[1m[31mmissing-wt[31m'. Run 'git worktree prune' to clean up.[0m
